--- a/httpaf-async.opam
+++ b/httpaf-async.opam
@@ -16,7 +16,7 @@ depends: [
   "dune" {>= "1.5.0"}
   "faraday-async" {>= "0.7.2"}
   "async" {>= "v0.14.0"}
-  "httpaf" {= version}
+  "httpaf"
 ]
 depopts: ["async_ssl"]
 pin-depends: [
