--- a/httpaf-async.opam
+++ b/httpaf-async.opam
@@ -17,6 +17,7 @@ depends: [
   "faraday-async" {>= "0.7.2"}
   "async" {>= "v0.14.0"}
   "httpaf"
+  "gluten-async"
 ]
 depopts: ["async_ssl"]
 synopsis: "Async support for http/af"
